# Transferengine-optimization

docs/superpowers/plans/: 2026-06-07-sunrise-store-parity.md
docs/superpowers/specs/: 2026-06-07-sunrise-store-parity-design.md
mooncake-integration/transfer_engine/: transfer_engine_py.cpp
mooncake-store/include/: dummy_client.h  gpu_staging_utils.h  real_client.h
mooncake-store/src/: CMakeLists.txt  aligned_client_buffer.cpp  client_service.cpp  dummy_client.cpp  real_client.cpp  real_client_main.cpp  shm_helper.cpp  transfer_task.cpp  utils.cpp
mooncake-store/tests/: batch_remove_test.cpp  client_integration_test.cpp  dummy_client_get_buffer_test.cpp  health_check_test.cpp  ipv6_client_test.cpp  pybind_client_test.cpp  stress_workload_test.cpp  task_integration_test.cpp
mooncake-store/tests/e2e/: client_wrapper.h  e2e_utils.h  storage_backend_e2e_test.cpp
mooncake-transfer-engine/example/: transfer_engine_bench.cpp
mooncake-transfer-engine/include/: common.h  config.h  sunrise_allocator.h  transfer_engine.h
mooncake-transfer-engine/include/transport/tcp_transport/: tcp_transport.h
mooncake-transfer-engine/src/: transfer_engine.cpp
mooncake-transfer-engine/src/transport/nvmeof_transport/: nvmeof_transport.cpp
mooncake-transfer-engine/tent/src/: CMakeLists.txt  transfer_engine.cpp
mooncake-transfer-engine/tent/src/platform/sunrise/: CMakeLists.txt  sunrise_allocator.cpp  sunrise_probe.cpp
mooncake-transfer-engine/tent/tests/: transport_selector_test.cpp
mooncake-transfer-engine/tests/: common_test.cpp
(+7 files in other folders)
